fix the restaurent reviews li's width so that no overlaping happens wiht the map

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -56,6 +56,12 @@ ul#restaurants-list {
     justify-self: start;
     padding-left: 0px;
   }
+  #reviews-list li {
+
+        font-size: 25px;
+        text-align: left;
+        width: 80%;
+    }
 }
 
 
